# frappe_ui_enhancer

./: .gitignore  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  setup.cfg  setup.py
frappe_ui_enhancer/: api.py  boot.py  hooks.py  modules.txt  serve.py
frappe_ui_enhancer/frappe_ui_enhancer/: setup.py
frappe_ui_enhancer/frappe_ui_enhancer/doctype/notification_log/: notification_log.js  notification_log.json  notification_log.py
frappe_ui_enhancer/frappe_ui_enhancer/doctype/notification_rule/: notification_rule.js  notification_rule.json  notification_rule.py
frappe_ui_enhancer/frappe_ui_enhancer/doctype/notification_rule_recipient/: notification_rule_recipient.json  notification_rule_recipient.py
frappe_ui_enhancer/frappe_ui_enhancer/doctype/theme_preset/: theme_preset.js  theme_preset.json  theme_preset.py
frappe_ui_enhancer/frappe_ui_enhancer/doctype/ui_settings/: ui_settings.js  ui_settings.json  ui_settings.py
frappe_ui_enhancer/frappe_ui_enhancer/doctype/user_ui_preferences/: user_ui_preferences.js  user_ui_preferences.json  user_ui_preferences.py
frappe_ui_enhancer/public/css/: frappe_ui_enhancer.css
frappe_ui_enhancer/public/js/: frappe_ui_enhancer.js
frappe_ui_enhancer/utils/: notification_handler.py
