[project]
name = "frappe_ui_enhancer"
authors = [{ name = "Cyvetech", email = "muthukiaowen@cyvetech.com" }]
description = "Full-stack UI customisation and interactive notifications for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
