[metadata]
name = frappe_ui_enhancer
version = 0.1.0
description = Full-stack UI customisation and interactive notifications for Frappe/ERPNext
author = Cyvetech
author_email = muthukiaowen@cyvetech.com
url = https://github.com/muthukiaowen/frappe_ui_enhancer
license = MIT

[options]
python_requires = >=3.10
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]
* = *.json *.js *.css *.html *.txt
